	Added qps utility - Parse timestamps from log stream and calculate qps over sliding time window

version 0.5
	Added Prefix/Suffix matching to filterbots - Specify p'<prefix>' or s'<suffix>' in useragents file to use this feature
	Added comment support for filterbots useragents/ips files - use '#' in start of line
	Added JSONParser to parsing module, can now use JSON-formatted logs e.g for logmerge, logparse etc.
	Can now specify fields by field name in -f parameter for the logparse method/console script
	Can now specify multiple comma-separated field names/indices in logparse method
	Added --ignore flag to logparse, surpresses missing field errors and skips those lines
	Fixed memory bug resulting from un-needed use of readlines() on file descriptors
	
version 0.4
	Added unit-testing for logtools.parsers module
	Fixed small bug in GeoIP unit-testing
	Fixed small bug in logplot option parsing from configuration file
	Added logplot gchart backend 'line' chart type 
	Improved coverage of unit-testing for the plotting module
	Added support for regular expressions in bots useragents file. use r'<reg_ex>' syntax to specify a regexp line
	Added --format option for logparse, added set_format to Parser interface
	Added --print option to geoip utility, will print the country along with original log line
	
version 0.3
	Some bugfixes to command-line/options parsing
	setup.py long_description documentation
	Added logplot gchart backend chart type support (pie, histogram, line)
	Changed most methods' programmatic interface to use generators (yield values)
	Added 'aggregate' script
	
version 0.2
	Added support for configuration profiles (-P <profile_name>)
	Added logmerge utility and unittest
	Added logplot utility with initial Google Chart API support and unittest (Experimental)
	Added pygooglechart package dependency in setup.py
	
version 0.1
	Added to PyPI Python Package Index
	Initial check-in of project.
	Version 0.1 Tag