@@ -12,6 +12,8 @@ version 0.5
 	Can now specify multiple comma-separated field names/indices in logparse method
 	Added --ignore flag to logparse, surpresses missing field errors and skips those lines
 	Fixed memory bug resulting from un-needed use of readlines() on file descriptors
+	Added the 'timeseries' plot type for plotting timeseries data
+	Added the matplotlib plotting backend	
 	
 version 0.4
 	Added unit-testing for logtools.parsers module
